# gramstaint

./: .gitignore  README.md  gramstaint.py  pyproject.toml
.github/workflows/: pr.yml
