[project]
name = "gramstaint"
version = "0.1.0"
description = "Enumerate, score, and bulk-remove Instagram followers"
requires-python = ">=3.13"
dependencies = [
    "instagrapi>=2.10.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
