[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gramstaint"
dynamic = ["version"]
description = "Enumerate, score, and bulk-remove Instagram followers"
requires-python = ">=3.13"
dependencies = [
    "instagrapi>=2.10.4",
]

[project.scripts]
gramstaint = "gramstaint:main"

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
